# letterp

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
p-agent-token/: .gitignore  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  README.md  agent-token.example.json
p-agent-token/src/: README.md  error.rs  errors.rs  instruction.rs  kani_verification.rs  lib.rs  pdas.rs  processor.rs  state.rs
p-agent-token/src/instructions/: bind_agent_token.rs  buy.rs  delegate_executor.rs  graduate.rs  helpers.rs  initialize_agent.rs  initialize_agent_mint.rs  mod.rs  sell.rs
p-memo-main/: Cargo.toml  README.md  package.json
p-memo-main/src/: entrypoint.rs  lib.rs
p-memo-main/tests/: memo.rs
p-token-main/: Cargo.toml  README.md  pnpm-lock.yaml
p-token-main/.github/workflows/: main.yml
p-token-main/clients/js/: package.json
p-token-main/clients/rust/: Cargo.toml
p-token-main/scripts/: generate-clients.mjs
p-token-main/scripts/program/: test.mjs
pinocchio/pinocchio-main/: Cargo.toml  README.md  SECURITY.MD
pinocchio/pinocchio-main/.github/: cliff.toml  dependabot.yml
pinocchio/pinocchio-main/sdk/: Cargo.toml
programs/src/: Cargo.toml
programs/src/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
templates/p-agent-token/: Cargo.toml  KANI_VERIFICATION.md  README.md  agent-token.example.json
templates/p-agent-token/src/: errors.rs  lib.rs  state.rs
templates/vault/: Cargo.toml  README.md
templates/vault/src/: errors.rs  lib.rs  state.rs
token-main/: .gitignore  ARCHITECTURE.md  COMING_SOON.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
token-main/01_pinocchio_core/: README.md
token-main/01_pinocchio_core/account_info/: README.md
token-main/01_pinocchio_core/instruction_data/: README.md
token-main/01_pinocchio_core/program_entrypoint/: README.md
token-main/01_pinocchio_core/syscalls/: README.md
token-main/01_pinocchio_core/zero_copy_layout/: README.md
token-main/02_token_classic/: README.md
token-main/02_token_classic/approve_delegate/: README.md
token-main/02_token_classic/burn/: README.md
token-main/02_token_classic/close_account/: README.md
token-main/02_token_classic/freeze_thaw/: README.md
token-main/02_token_classic/mint_creation/: README.md
token-main/02_token_classic/multisig/: README.md
token-main/02_token_classic/revoke/: README.md
token-main/02_token_classic/token_account/: README.md
token-main/02_token_classic/transfer/: README.md
token-main/03_token_2022/: README.md
token-main/03_token_2022/close_account_2022/: README.md
token-main/03_token_2022/mint_with_extensions/: README.md
token-main/03_token_2022/reallocate/: README.md
token-main/03_token_2022/token_account_2022/: README.md
token-main/04_extensions/: README.md
token-main/04_extensions/confidential_transfer/: README.md
token-main/04_extensions/confidential_transfer_fee/: README.md
token-main/04_extensions/cpi_guard/: README.md
token-main/04_extensions/default_account_state/: README.md
token-main/04_extensions/group_member_pointer/: README.md
token-main/04_extensions/group_pointer/: README.md
token-main/04_extensions/immutable_owner/: README.md
token-main/04_extensions/interest_bearing/: README.md
token-main/04_extensions/metadata_pointer/: README.md
token-main/04_extensions/mint_close_authority/: README.md
token-main/04_extensions/non_transferable/: README.md
token-main/04_extensions/permanent_delegate/: README.md
token-main/04_extensions/required_memo/: README.md
token-main/04_extensions/token_metadata/: README.md
token-main/04_extensions/transfer_fee/: README.md
token-main/04_extensions/transfer_hook/: README.md
token-main/05_cpi/: README.md
token-main/05_cpi/invoke_associated_token/: README.md
token-main/05_cpi/invoke_system_program/: README.md
token-main/05_cpi/invoke_token_2022/: README.md
token-main/05_cpi/invoke_token_program/: README.md
token-main/06_pda/: README.md
token-main/06_pda/bump_seed_management/: README.md
token-main/06_pda/derivation/: README.md
token-main/06_pda/validation/: README.md
token-main/07_associated_token/: README.md
token-main/07_associated_token/create_ata/: README.md
token-main/07_associated_token/get_ata_address/: README.md
token-main/07_associated_token/idempotent_create/: README.md
token-main/08_serialization/: README.md
token-main/08_serialization/borsh_decode/: README.md
token-main/08_serialization/borsh_encode/: README.md
token-main/08_serialization/pack_unpack/: README.md
token-main/09_math/: README.md
token-main/09_math/checked_arithmetic/: README.md
token-main/09_math/decimals/: README.md
token-main/09_math/u64_helpers/: README.md
token-main/10_validation/: README.md
token-main/10_validation/account_state_checks/: README.md
token-main/10_validation/mint_validation/: README.md
token-main/10_validation/owner_checks/: README.md
token-main/10_validation/signer_checks/: README.md
token-main/11_errors/: README.md
token-main/11_errors/extension_errors/: README.md
token-main/11_errors/token_errors/: README.md
token-main/12_constants/: README.md
token-main/12_constants/program_ids/: README.md
token-main/12_constants/seeds/: README.md
token-main/13_examples/: README.md
token-main/13_examples/basic_mint/: README.md
token-main/13_examples/confidential_mint/: README.md
token-main/13_examples/token_with_metadata/: README.md
token-main/13_examples/transfer_hook_example/: README.md
token-main/13_examples/transfer_with_fee/: README.md
token-main/14_tests/: README.md
token-main/14_tests/bankrun/: README.md
token-main/14_tests/integration/: README.md
token-main/14_tests/unit/: README.md
token-main/15_docs/: KANI_VERIFICATION.md  README.md  agent_x402_curves_perps.md
token-main/15_docs/extension_cookbook/: README.md
token-main/15_docs/migration_guide/: README.md
token-main/15_docs/pinocchio_guide/: README.md
token-main/program-ids/: README.md
token-main/programs/: README.md
token-main/ptoken-sdk/: Cargo.toml
token-main/scripts/: estimate-mainnet-rent.sh
(+362 files in other folders)
