[package]
name = "p-agent-token"
version = "0.1.0"
edition = "2021"
description = "P Agent Token — Pinocchio bonding-curve agent program for Solana mainnet"

[features]
no-entrypoint = []

[dependencies]
pinocchio        = { path = "../pinocchio/pinocchio-main/sdk", features = ["cpi", "alloc", "copy", "sha2"] }
pinocchio-log    = "0.5"
pinocchio-system = { path = "../pinocchio/pinocchio-main/programs/system" }
pinocchio-token  = { path = "../pinocchio/pinocchio-main/programs/token" }
# Needed for Address::create_program_address on non-BPF targets (cargo check)
solana-address   = { version = "2.5", features = ["curve25519"] }

[lib]
name = "p_agent_token"
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"
lto = true
debug = false
overflow-checks = true
