[package]
name = "p-memo"
version = "0.0.0"
description = "A pinocchio-based Memo (aka 'p-memo') program"
repository = "https://github.com/febo/p-memo"
license = "Apache-2.0"
edition = "2021"
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[dependencies]
five8 = "0.2.1"
pinocchio = { version = "0.8", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/entrypoint-cleanup" }
pinocchio-log = { version = "0.4", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/entrypoint-cleanup" }

[dev-dependencies]
mollusk-svm = "0.1"
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-program-error = "2.2.1"
solana-pubkey = "2.2.1"
