[workspace]
resolver = "2"
members = [
    "programs/associated-token-account",
    "programs/memo",
    "programs/system",
    "programs/token",
    "programs/token-2022",
    "sdk",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anza-xyz/pinocchio"
rust-version = "1.89.0"

[workspace.dependencies]
pinocchio = { version = "0.11", default-features = false, path = "sdk" }
solana-account-view = "2.0"
solana-address = "2.0"
solana-define-syscall = "5.0"
solana-instruction-view = "2.1"
solana-program-error = "3.0"

[workspace.metadata.cli]
solana = "3.1.8"

[workspace.metadata.toolchains]
build = "1.89.0"
format = "nightly-2026-01-22"
lint = "nightly-2026-01-22"
test = "1.89.0"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.metadata.spellcheck]
config = "scripts/setup/spellcheck.toml"
