[package]
name = "x402-bonding-curve"
version = "0.1.0"
edition = "2021"
description = "On-chain bonding-curve program for the x402-ptoken-launchpad"

[features]
no-entrypoint = []
no-idl = []

[dependencies]
pinocchio = { path = "../../pinocchio/pinocchio-main/sdk" }
pinocchio-log = "0.5"
pinocchio-system = { path = "../../pinocchio/pinocchio-main/programs/system" }
pinocchio-token = { path = "../../pinocchio/pinocchio-main/programs/token" }

[lib]
name = "x402_bonding_curve"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"
lto = true
debug = false
overflow-checks = true
