[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["perf"]
perf = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = { path = "../../pinocchio/pinocchio-main/sdk", features = ["cpi"] }
pinocchio-system = { path = "../../pinocchio/pinocchio-main/programs/system" }
pinocchio-token = { path = "../../pinocchio/pinocchio-main/programs/token" }
pinocchio-associated-token-account = { path = "../../pinocchio/pinocchio-main/programs/associated-token-account" }
thiserror = { version = "2", default-features = false }
