[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["perf"]
perf = []

[dependencies]
pinocchio = { path = "../../pinocchio/pinocchio-main/sdk", features = ["cpi"] }
pinocchio-system = { path = "../../pinocchio/pinocchio-main/programs/system" }
pinocchio-token = { path = "../../pinocchio/pinocchio-main/programs/token" }
thiserror = { version = "2", default-features = false }
