[package]
name = "ptoken-sdk"
version = "0.1.0"
edition = "2021"
description = "LetterP Solana token SDK primitives for SPL Token and Token-2022"
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = []
full = ["runtime", "token-classic", "token-2022", "all-extensions"]
runtime = []
token-classic = []
token-2022 = []
all-extensions = ["token-2022"]
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
solana-program = { workspace = true }
solana-zk-token-sdk = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-associated-token-account = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
