[package]
name = "pinocchio"
description = "Create Solana programs with no external dependencies attached"
version = "0.11.1"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[features]
account-resize = []
alloc = ["solana-instruction-view?/slice-cpi"]
copy = ["solana-account-view/copy", "solana-address/copy"]
cpi = ["dep:solana-instruction-view"]
default = ["alloc", "copy", "sha2"]
sha2 = ["solana-address/sha2"]
unsafe-account-resize = []

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true, features = ["syscalls"] }
solana-instruction-view = { workspace = true, features = ["cpi"], optional = true }
solana-program-error = { workspace = true }

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { workspace = true }

[dev-dependencies]
solana-address = { workspace = true, features = ["decode"] }
pinocchio = { path = ".", features = ["alloc", "account-resize"] }
