[package]
name = "basic-mint"
version = "0.1.0"
edition = "2021"
description = "LetterP example: create a mint, ATA, mint, transfer, and burn"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
ptoken-sdk = { path = "../../ptoken-sdk" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("custom-heap", "custom-panic"))'] }
