[package]
name = "confidential-mint"
version = "0.1.0"
edition = "2021"
description = "LetterP example: Token-2022 confidential transfer extension"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
spl-token-2022 = { workspace = true }
ptoken-sdk = { path = "../../ptoken-sdk" }
