[package]
name = "transfer-with-fee"
version = "0.1.0"
edition = "2021"
description = "pToken example: Token-2022 transfer fee extension"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
ptoken-sdk = { path = "../../ptoken-sdk" }
