[package]
name = "letterp-perpetuals"
version = "0.1.0"
edition = "2021"
description = "LetterP perpetuals Solana program"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-program = { workspace = true }
ptoken-sdk = { path = "../../ptoken-sdk" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("custom-heap", "custom-panic"))'] }
