[package]
name = "pinocchio-associated-token-account"
description = "Pinocchio helpers to invoke Associated Token Account program instructions"
version = "0.4.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true, features = ["decode"] }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error = { workspace = true }
