[package]
name = "pinocchio-token"
description = "Pinocchio helpers to invoke Token program instructions"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
readme = "./README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["rlib"]

[features]
alloc = []

[dependencies]
solana-account-view = { workspace = true }
solana-address = { workspace = true, features = ["decode"] }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error = { workspace = true }

[dev-dependencies]
strum = "0.28"
strum_macros = "0.28"
